MUJE KOI RULE CHANGE NAHI KARNA KYU K MERE FIREBASE ME JO RULE HAI WO IS

--- a/.env
+++ b/.env
@@ -1,7 +1,9 @@
-NEXT_PUBLIC_FIREBASE_API_KEY=AIzaSyAAulR2nJQm-4QtNyEqKTnnDPw-iKW92Mc
-NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN=my-job-file-system.firebaseapp.com
-NEXT_PUBLIC_FIREBASE_PROJECT_ID=my-job-file-system
-NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET=my-job-file-system.appspot.com
-NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=145307873304
-NEXT_PUBLIC_FIREBASE_APP_ID=1:145307873304:web:d661ea6ec118801b4a136d
-NEXT_PUBLIC_FIREBASE_MEASUREMENT_ID=G-8EHX5K7YHL
+NEXT_PUBLIC_FIREBASE_API_KEY=
+NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN=
+NEXT_PUBLIC_FIREBASE_PROJECT_ID=
+NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET=
+NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=
+NEXT_PUBLIC_FIREBASE_APP_ID=
+NEXT_PUBLIC_FIREBASE_MEASUREMENT_ID=
+FIREBASE_CLIENT_EMAIL=
+FIREBASE_PRIVATE_KEY=
